--- a/02_Declaration_Diagnosis_in_Practice/02_Specifying_the_Model.Rmd
+++ b/02_Declaration_Diagnosis_in_Practice/02_Specifying_the_Model.Rmd
@@ -42,61 +42,69 @@ b_sims <- 20
 - Measurements are potential outcomes
  -->
 
-In section X, we said that a model has three things: a set of endogenous and exogenous variables; a set of equations defining how those variables are related; and a set of probability distributions over the exogenous variables. In this chapter, we will talk about how to go about the tricky task of specifying those three things and why it is so important to do so. 
 
-Key learning points: 
+<!-- Key learning points: 
  
  - Learning depends on models because they are the only way to understand how your answer and data strategy perform with respect to your inquiry
  - The key thing a model does is posit potential outcomes---those are the building blocks of what you can ask (your $I$nquiry) and what you can observe (your $A$nswer strategy)
- - How to take control of your potential outcomes: you will learn what counterfactual states of the world you need model explicitly and which ones you do not
+ - How to take control of your potential outcomes: you will learn what counterfactual states of the world you need model explicitly and which ones you do not -->
 
 <!-- Your model encodes two very important pieces of information: first, the assumptions under which conclusions about your design's properties were reached---when it is unbiased versus unbiased, when it has low versus high power; second, your model defines what potential outcomes your inquiry and answer strategy are defined over.  -->
 
 <!-- FIX: In practice, we never get to observe all of the potential outcomes: but knowing what they *could* be means that you can compare the true answer to some inquiry, as defined by the model, to the actual answer to the inquiry your research design would provide, if the world looked like your model.  -->
 
-## Models versus modelling
+<!-- ## Models versus modelling -->
 
-In this chapter, we are not talking about "statistical models" used to estimate unknown parameters---that is part of your answer strategy. We are talking about specifying simulation models: a set of assumptions encoded in math or computer language that can be used to generate imaginary datasets. <!-- Using a capital $M$ model to simulate fake datasets, you can learn about the properties of your answer strategy, which may or may not involve statistical modelling.  -->
 
-The distinction is a subtle but important one. To see why, let us talk about fish. How many fish *are* there in the ocean, anyway? It turns out we do not know the answer to this question: we just cannot count all the fish. 
+In this chapter, we will talk about how to go about the tricky task of specifying a $M$odel and why it is so important to do so. 
+We are not talking about "statistical models" used to estimate unknown parameters---those are part of your answer strategy. We are talking about specifying simulation models: a set of assumptions about how your data could be generated, encoded in math or computer language, which we can use to generate imaginary datasets. <!-- Using a capital $M$ model to simulate fake datasets, you can learn about the properties of your answer strategy, which may or may not involve statistical modelling.  -->
+
+The distinction is a subtle but important one. We should only trust the inferences we draw from a statistical model if we think they would be good inferences to draw based on a plausible $M$odel of how the data was generated. 
+
+$M$odels often lurk where you might not expect them. When researchers do experiments, they often compare the average observed outcome in the treatment group to the average observed outcome in the control group in order to get an estimate of the average treatment effect.^[...of putting one person in treatment and everyone else in control] This comparison requires no statistical modelling of the distributions of the observed variables: it follows from the fact that the average difference in two potential outcomes is equal to the difference in the averages of those two potential outcomes. So it seems as though such strategies are completely agnostic as to how the data was generated. 
+
+Implicit in the very definition of the average treatment effect here, however, is a $M$odel: specifically, one in which any particular draw of the random assignment is able to reveal no more than two potential outcomes for any given individual---this is sometimes referred to as a "no spillovers" assumption. But many social processes violate this assumption. If I do something differently every time you get treated and I do not, then I have at least three potential outcomes: one in which I am treated, one in which neither of us are treated, and one in which you are treated but I am not. The average observed difference-in-means across random assignments might diverge quite substantially from the effect we are interested in (say, of putting just one person in treatment and the rest in control). So even the simplest, most agnostic research design is relying on the plausibility of an implicit $M$odel in order to generate insights that are correct on average. 
+
+In practice, we never get to know whether our $M$odel is right. For example, we can never really know how many potential outcomes there are. So we also cannot know if we got the right answer. What we can do, however, is study our procedure for generating answers under $M$odels of the world that we find plausible. That way, we do get to know which answers we should and should not trust, given the assumptions we are willing to make about the world.
+
+
+
+
+<!-- INTRODUCE IDEA OF POs -->
+
+
+
+
+<!-- , we can know how many fish we *would* guess are in the ocean were our assumptions about the ocean correct. We never get to know if we guessed correctly, but we do get to know which guesses we should and should not trust, given the assumptions we are willing to make about the world. -->
+
+
+<!-- To see why, let us talk about fish. How many fish *are* there in the ocean, anyway? It turns out we do not know the answer to this question: we just cannot count all the fish. 
 
 We do have answers, though: scientists estimate there are 3.5 trillion fish in the ocean as of 2017. But if we cannot count them, how do we get this answer and why should we ever believe it? It all depends on comparisons between $M$odels and modelling. 
 
 Let us say our $M$odel states that $N$ fish exist. We want to see how well a statistical modelling strategy would do at guessing $N$. Our $M$odel further assumes the fish do not die, reproduce, or migrate. They do not have any favorite spots in the sea, so they are equally likely to be caught no matter where you cast your net. Moreover, the fish are brave fish: having been caught once and released, the fish do not shy away from being caught again. 
 
-One of the simplest modelling techniques to estimate the size of an unknown population is the capture-recapture technique: Net $n$ fish, tag them, and release them; catch another $K$ fish, count the $k$ that are tagged (from the previous netting), and release them. This leads to a pretty simple statistical model, $n/N = k/K \Rightarrow \hat{N} = Kn/k$. In our [design library entry on sample-resample designs][Sample-resample designs] we show that this design does a fairly good job of getting the answer right, *under this $M$odel*.
+One of the simplest modelling techniques to estimate the size of an unknown population is the capture-recapture technique: Net $n$ fish, tag them, and release them; catch another $K$ fish, count the $k$ that are tagged (from the previous netting), and release them. This leads to a pretty simple statistical model, $n/N = k/K \Rightarrow \hat{N} = Kn/k$, which does a fairly good job of getting the answer right, *under this $M$odel*.
 
 In reality though, we know that the posited $M$odel of the world is very unrealistic: fish die, migrate, reproduce, favor certain spots, drop their tags, and avoid nets at different rates. So, if you were told you that the 3.5 million number came from the simple modelling exercise above, you would rightly distrust it. What fisheries scientists actually do is draw on a wealth of research to build  really complex and much more realistic $M$odels on computers, which are capable of simulating fish stocks. With those $M$odels and the imaginary but known fish populations they generate, we can test the performance of more sophisticated statistical modelling strategies. If the statistical models do a pretty good job of guessing the size of the imaginary fish populations, then we should feel more inclined to trust the numbers they give us when we go out and use them in the real world.
 
-In other words, the distinction between $M$odels and modelling here gives us something quite profound: though we may never know how many fish are really in the ocean, we can know how many fish we *would* guess are in the ocean were our assumptions about the ocean correct. We never get to know if we guessed correctly, but we do get to know which guesses we should and should not trust, given the assumptions we are willing to make about the world. <!-- If our $M$odel seems plausible and the statistical modelling gives us decent answers on average, then maybe the answer we get when we apply that statistical model to real data is not all that bad. So, we have made an unanswerable question answerable, and we know the conditions under which the answer is good. --> <!-- In fact, this principle is pretty general:   -->
+In other words, the distinction between $M$odels and modelling here gives us something quite profound: though we may never know how many fish are really in the ocean, we can know how many fish we *would* guess are in the ocean were our assumptions about the ocean correct. We never get to know if we guessed correctly, but we do get to know which guesses we should and should not trust, given the assumptions we are willing to make about the world. --> <!-- If our $M$odel seems plausible and the statistical modelling gives us decent answers on average, then maybe the answer we get when we apply that statistical model to real data is not all that bad. So, we have made an unanswerable question answerable, and we know the conditions under which the answer is good. --> <!-- In fact, this principle is pretty general:   -->
 
-## Without a model you can get the answer pretty wrong
 
-Most of our causal and descriptive inferences are based on the plausibility of an implicit $M$odel---in fact, $M$odels often lurk where you might not expect them. For example, many experimental designs appear not to rely on $M$odels in order to generate plausible inferences, because their *answer strategies* do not engage in any modelling of variables. The linearity of expectations implies that $E[Y_i(Z_i = 1) - Y_i(Z_i = 0)]$ is equal to $E[Y_i(Z_i = 1)] - E[Y_i(Z_i = 0)]$---in English, the average difference in potential outcomes is equal to the difference in average potential outcomes. Many researchers take this to mean that they can simply compare the average observed outcome in the treatment group, $E[Y_i |Z_i = 1]$ to the average observed outcome in the control group, $E[Y_i |Z_i = 0]$, in order to get an unbiased estimate of the average treatment effect.^[...of putting one person in treatment and everyone else in control] Since this comparison requires no statistical modelling of the distributions of the observed variables, it seems as though such strategies are completely agnostic as to how the world works. 
-
-Implicit in the very definition of the estimand here, however, is a $M$odel: specifically, one in which any particular draw of the random assignment is able to reveal no more than two potential outcomes for any given individual---this is sometimes referred to as the Stable Unit Treatment Value Assumption (SUTVA). But many social processes violate this assumption. If I do something differently every time you get treated and I do not, then I have at least three potential outcomes: one in which I am treated, one in which neither of us are treated, and one in which you are treated but I am not. The average observed difference-in-means across random assignments might diverge quite substantially from the true average effect of putting just one person in treatment and the rest in control, for example. (Callout to section on spillovers). So even the simplest, most agnostic research design is relying on the plausibility of an implicit model in order for to generate insights that are correct on average.
-
-Of course, some research designs require much more $M$odel than others. In an experiment, we typically worry about everything that happens post-assignment when we draw up a $M$odel: attrition, compliance, and so forth. But in observational studies, in addition to those issues, the $M$odel for pretreatment variables can matter a lot. 
-
-Take the simplest possible design, in which we want to know the effect of a non-randomly assigned treatment, $Z$, on $Y$. Say you have a pretreatment covariate, $X$, that is correlated with both $Z$ and $Y$. Should you control for $X$? 
-
-Some authors might argue that, because the values of $X$ are realized prior to the values of $Z$ and time cannot flow backwards, $X$ is causally antecedent to $Z$ and so it follows you cannot do worse by including it. @rosenbaum2002observational, for instance, argues that "there is little to no reason to avoid adjustment for a true covariate, a variable describing subjects before treatment." However, as @greenland1999causal have shown, it turns out that if $Z$ and $Y$ are not confounded but $X$ and $Y$ are, then controlling for $X$ introduces additional spurious dependency between $Z$ and $Y$ that can create considerable bias. If the question is "should you control for $X$?" the answer is always "it depends on your $M$odel." 
-
-So, you really need to specify a $M$odel: doing so helps determine the conditions under which your answers are credible. Without knowing the conditions under which we can believe your answers, it is hard to know whether to believe your answer. $M$odels play a second and equally important role: they define the ''potential outcomes'' of the individuals in your study. Those are critical, because they form the basis of both your inquiry---what you want to know---and your answer strategy---what you can observe. 
 
 ## Declaring exogenous and endogenous variables in the population
 
-Remember from Chapter X that declaring a $M$odel means specifying exogenous and endogenous variables, how they are related to one another, and the probability distributions that determine which values the variables take. Further below, we will talk about how to use pre-existing data to build a $M$odel, but suppose for now that we must build it entirely from scratch.
 
-An exogenous variable is one whose values do not depend on the values of any other variable in the $M$odel. By contrast, an endogenous variable is one whose values *can* depend on another variable. We use the term "parent" to describe the variables that endogenous variables depend on directly. The following line of code, taken and modified from the $M$odel from our [A simple design declaration][simple design declaration], contains a fully specified model:
+Remember from Chapter X that declaring a $M$odel means specifying exogenous and endogenous variables, how they are related to one another, and the probability distributions that determine which values the variables take. That might sound hard but it does not need to be. The following line of code contains a fully specified model:
 
 ```{r}
 population <- declare_population(N = 8, e = runif(N), X = rnorm(N, e, 1)) 
 ```
 
-Here, `e` is an exogenous variable: it is simply a random draw from the uniform distribution between 0 and 1, inclusive. So long as $N$ stays fixed, no other variables influence the values that `e` takes on. By contrast, `X` is defined as a function of the value that `e` takes, so it is endogenous. The code says that the value that `X` takes for a given individual is equal to a random draw from a normal distribution whose mean is equal to their value of `e` and whose standard deviation is equal to 1. Say, for example, that `e` took the value .35 for the fifth individual in the study.  In that case, the fifth individual will get a value of `X` that should be close to, but not exactly, .35. Our model has two variables, one of which is uniformly distributed and the other of which is normally distributed, with the mean of `X` depending on the value of `e`. We refer to `e` as a parent of `X` because it appears in the expression for `X`. 
+An **exogenous variable** is one whose values do not depend on the values of any other variable in the $M$odel. 
+Here, `e` is an exogenous variable: it is simply a random draw from the uniform distribution between 0 and 1, inclusive. So long as $N$ stays fixed, no other variables influence the values that `e` takes on. 
 
-## Declaring potential outcomes
+An **endogenous variable** is one whose values *can* depend on another variable. We use the term "parent" to describe the variables that endogenous variables depend on directly. Here, because `X` is defined as a function of the value that `e` takes, we say `X` is endogenous to its parent, `e`. The code says that the value that `X` takes for a given individual is equal to a random draw from a normal distribution whose mean is equal to their value of `e` and whose standard deviation is equal to 1. <!-- Say, for example, that `e` took the value .35 for the fifth individual in the study.  In that case, the fifth individual will get a value of `X` that should be close to, but not exactly, .35.  --> <!-- Our model has two variables, one of which is uniformly distributed and the other of which is normally distributed, with the mean of `X` depending on the value of `e`. --> <!-- We refer to `e` as a parent of `X` because it appears in the expression for `X`.  -->
 
 The population function we just declared generates random datasets with eight observations of `e` and `X`. Try running this code a few times to see:
 
@@ -104,13 +112,20 @@ The population function we just declared generates random datasets with eight ob
 population()
 ```
 
-The population function is a useful place to declare all of the exogenous variables and many of the endogenous variables in our study. We will talk below about how to build more sophisticated population structures, with hierarchical dependencies and randomly-generated sample sizes. But a key step in building the model comes after the declaration of the population function and it is important to talk about it first: declaring the potential outcomes. So what are the potential outcomes?
+As we will see below, the population function is a useful place to declare all of the exogenous variables and many of the endogenous variables in our study, along with some pretty complicated relationships between them. 
+
+If we want 
+
+## Declaring potential outcomes
+The point is that potential outcomes are the building blocks of your inquiry---if you are not interested in the counterfactual differences in an outcome generated by some other variable, then you do not need to worry about the corresponding potential outcomes. But if you want to know a causal effect, you have to model the state of the world when the cause is present and the one in which it is absent. A causal effect is defined as the difference between those two states of the world.
+
+
 
 Consider the case of an outcome, $Y$, that responds to a (possibly randomized) treatment assignment, $Z$. For example, $Z$ might be a coin-flip that assigns people to treatment when it comes up heads ($Z = 1$) and to control when it comes up tails ($Z = 0$). We can express the $i$'th individual's outcome when the assignment variable takes value $z$ as $Y_i(Z_i = z)$. For a binary treatment, this gives rise to at least three different variables: $Y_i$, $Y_i(Z_i = 1)$, and $Y_i(Z_i = 0)$. 
 
 The first variable is a list of the actual observed outcomes for any given realization of treatment assignment: if you flip the coin eight times, for example, $Y_i$ will be a variable that is eight observations long that tells you what happened to the people who did and did not get assigned to treatment. The second variable is the potential outcome of an individual if you set their treatment assignment to 'treated'---i.e., a list of everyone's outcomes imagining that you only flipped heads. And the third is the potential outcome of an individual if you set their treatment assignment to 'untreated'---a list of every person's outcomes in a world where you only flip tails.
 
-What's so important about defining these imaginary potential outcomes? Why do we need all three of these variables, and not just $Y_i$, the values we actually observe? The point is that potential outcomes are the building blocks of your inquiry---if you are not interested in the counterfactual differences in an outcome generated by some other variable, then you do not need to worry about the corresponding potential outcomes. But if you want to know a causal effect, you have to model the state of the world when the cause is present and the one in which it is absent. A causal effect is defined as the difference between those two states of the world.
+What's so important about defining these imaginary potential outcomes? Why do we need all three of these variables, and not just $Y_i$, the values we actually observe? 
 
 That is why `DeclareDesign` has a whole step devoted to declaring potential outcomes. The `declare_potential_outcomes()` step is crucial because it splits up endogenous variables into the *counterfactual* sets of values they could take, given the variables they depend on. Consider this declaration:
 
@@ -365,5 +380,13 @@ Third, and maybe most importantly for practical purposes, a null design does not
 - Time-series models 
 - Stochastic group sizes
 
+## Without a model you can get the answer pretty wrong
 
+Of course, some research designs require much more $M$odel than others. In an experiment, we typically worry about everything that happens post-assignment when we draw up a $M$odel: attrition, compliance, and so forth. But in observational studies, in addition to those issues, the $M$odel for pretreatment variables can matter a lot. 
+
+Take the simplest possible design, in which we want to know the effect of a non-randomly assigned treatment, $Z$, on $Y$. Say you have a pretreatment covariate, $X$, that is correlated with both $Z$ and $Y$. Should you control for $X$? 
+
+Some authors might argue that, because the values of $X$ are realized prior to the values of $Z$ and time cannot flow backwards, $X$ is causally antecedent to $Z$ and so it follows you cannot do worse by including it. @rosenbaum2002observational, for instance, argues that "there is little to no reason to avoid adjustment for a true covariate, a variable describing subjects before treatment." However, as @greenland1999causal have shown, it turns out that if $Z$ and $Y$ are not confounded but $X$ and $Y$ are, then controlling for $X$ introduces additional spurious dependency between $Z$ and $Y$ that can create considerable bias. If the question is "should you control for $X$?" the answer is always "it depends on your $M$odel." 
+
+So, you really need to specify a $M$odel: doing so helps determine the conditions under which your answers are credible. Without knowing the conditions under which we can believe your answers, it is hard to know whether to believe your answer. 
 
